--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -39,7 +39,7 @@
 <body class="home">
 <div id="skip"> <a href="#skip-content" accesskey="2">Skip to content</a> </div>
 <div id="header">
-  <div id="branding"><a href="http://www.cam.ac.uk/" accesskey="1"><img src="global/images/identifier4.gif" alt="University of Cambridge" class="ucam" /></a><a href="http://www-ucc.ch.cam.ac.uk"><img src="global/ucc.png" alt="Unilever Centre for Molecular Science Informatics" class="ucc-logo" width="118" height="50" /></a></div>
+  <div id="branding"><a href="http://www.cam.ac.uk/" accesskey="1"><img src="global/images/identifier4.gif" alt="University of Cambridge" class="ucam" /></a><a href="http://www-ucc.ch.cam.ac.uk"><img src="global/ucc.png" alt="Centre for Molecular Informatics" class="ucc-logo" width="125" height="50" /></a></div>
 </div><!--- #header ends -->
 
 <div id="dept-title">
@@ -53,7 +53,7 @@
 <ul id="nav-breadcrumb">
   <li class="first"><a href="http://www.cam.ac.uk/">University of Cambridge</a></li>
   <li><a href="http://www.ch.cam.ac.uk/">Department of Chemistry</a></li>
-  <li><a href="http://www-ucc.ch.cam.ac.uk/">Unilever Centre for Molecular Science Informatics</a></li>
+  <li><a href="http://www-ucc.ch.cam.ac.uk/">Centre for Molecular Informatics</a></li>
 </ul>
 
 <div style="min-height: 360px">
@@ -63,7 +63,7 @@
       <input type="submit" value="Submit" />
     </fieldset>
   </form>
-  <p><span id="last-update">Updated 19/4/14: StdInChIKeys are now generated.</span><br/>If you have found OPSIN useful in your work citing our <a href="http://pubs.acs.org/doi/full/10.1021/ci100384d">paper</a> would be very much appreciated. Depiction courtesy of the <a href="http://ggasoftware.com/opensource/indigo">Indigo Toolkit</a></p>
+  <p><span id="last-update">Updated 9/9/14: Now attempts to interpret metal oxides</span><br/>If you have found OPSIN useful in your work citing our <a href="http://pubs.acs.org/doi/full/10.1021/ci100384d">paper</a> would be very much appreciated. Depiction courtesy of the <a href="http://ggasoftware.com/opensource/indigo">Indigo Toolkit</a></p>
   <div id="opsininstructions">
     <p>Enter a chemical name into the box and then click submit.<br />
        The chemical structure described by the name, or why it could not be interpreted, will appear here.</p>
@@ -103,7 +103,7 @@
 <!-- end of #content -->
 
 <ul id="site-info">
-  <li class="copy">&copy; 2009-2014 <a href="mailto:daniel@nextmovesoftware.com">Daniel Lowe</a>, Unilever Centre for Molecular Science Informatics</li>
+  <li class="copy">&copy; 2009-2014 <a href="mailto:daniel@nextmovesoftware.com">Daniel Lowe</a>, Centre for Molecular Informatics</li>
   <li class="link last"><a href="http://www.ch.cam.ac.uk/privacy.html">Privacy</a></li>
   <li class="link"><a href="http://www.cam.ac.uk/site/">Accessibility</a></li>
 </ul>
