--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -70,6 +70,8 @@
   </div>
   <div id="results" style="display:none">
     <p><img id="depiction" src="" alt="" /></p>
+    <h3 id="messagetype"></h3>
+    <p id="message"></p>
     <h3 title="Tautomer specific InChI i.e. The layers in StdInChI but with a &quot;fixed hydrogen&quot; layer included if required">InChI:</h3>
     <p id="inchi"></p>
     <h3 title="Hashed form of StdInChI. Multiple structures can have the same key (although this is in practice uncommon)">StdInChIKey:</h3>
