Updated documentation to note that json is now supported

--- a/src/main/webapp/information.html
+++ b/src/main/webapp/information.html
@@ -278,7 +278,7 @@ Available from <a href="https://app.box.com/s/8u4vewvfu3sol3axli3r">here</a>.</p
 
 <h3 id="libraries">Libraries</h3>
 <p>OPSIN utilises <a href="http://www.brics.dk/automaton/">dk.brics.automaton</a> to provide a discrete finite state automaton to allow the parsing of chemical names.
-<a href="http://www.xom.nu/">XOM</a> is used as an XML framework for reading in resource files and for holding information about how a name was parsed. 
+<a href="https://github.com/FasterXML/woodstox">Woodstox</a> is used as an XML framework for reading in resource files and writing CML. 
 <a href="http://jni-inchi.sourceforge.net/">JNI-InChI</a> is used to generate InChIs.
 Additionally for testing  <a href="http://www.junit.org/">JUnit</a> and <a href="http://mockito.org/">Mockito</a> are employed.
 The web interface is powered by <a href="http://www.restlet.org">Restlet</a> with the <a href="http://ggasoftware.com/opensource/indigo">Indigo toolkit</a>
