Added acknowledgement of YourKit profiler usage

--- a/src/main/webapp/information.html
+++ b/src/main/webapp/information.html
@@ -284,6 +284,11 @@ Additionally for testing  <a href="http://www.junit.org/">JUnit</a> and <a href=
 The web interface is powered by <a href="http://www.restlet.org">Restlet</a> with the <a href="http://ggasoftware.com/opensource/indigo">Indigo toolkit</a>
 being used for 2D coordinate generation and depiction.</p>
 
+<p><img style="border:none" src="https://www.yourkit.com/images/yklogo.png" alt="YourKit Logo" title="" /></p>
+<p>OPSIN's developers use YourKit to profile and optimise code.</p>
+<p>YourKit supports open source projects with its full-featured Java Profiler.
+YourKit, LLC is the creator of <a href="https://www.yourkit.com/java/profiler/index.jsp">YourKit Java Profiler</a> and <a href="https://www.yourkit.com/.net/profiler/index.jsp">YourKit .NET Profiler</a>, innovative and intelligent tools for profiling Java and .NET applications.</p>
+
 <h3 id="license">License and Warranty</h3>
 <p>OPSIN is licensed under the <a href="http://www.opensource.org/licenses/artistic-license-2.0.php">Artistic License v2.0</a></p>
 <p>OPSIN is made available in the hope that it will be useful, but WITHOUT ANY WARRANTY;
