--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -63,7 +63,7 @@
       <input type="submit" value="Submit" />
     </fieldset>
   </form>
-  <p><span id="last-update">Updated 19/12/15: Added support for fractional salt multipliers</span><br/>If you have found OPSIN useful in your work citing our <a href="http://pubs.acs.org/doi/full/10.1021/ci100384d">paper</a> would be very much appreciated. Depiction courtesy of the <a href="http://ggasoftware.com/opensource/indigo">Indigo Toolkit</a></p>
+  <p><span id="last-update">Updated 25/01/16: Server problems now resolved</span><br/>If you have found OPSIN useful in your work citing our <a href="http://pubs.acs.org/doi/full/10.1021/ci100384d">paper</a> would be very much appreciated. Depiction courtesy of the <a href="http://ggasoftware.com/opensource/indigo">Indigo Toolkit</a></p>
   <div id="opsininstructions">
     <p>Enter a chemical name into the box and then click submit.<br />
        The chemical structure described by the name, or why it could not be interpreted, will appear here.</p>
@@ -105,7 +105,7 @@
 <!-- end of #content -->
 
 <ul id="site-info">
-  <li class="copy">&copy; 2009-2015 <a href="mailto:daniel@nextmovesoftware.com">Daniel Lowe</a>, Centre for Molecular Informatics</li>
+  <li class="copy">&copy; 2009-2016 <a href="mailto:daniel@nextmovesoftware.com">Daniel Lowe</a>, Centre for Molecular Informatics</li>
   <li class="link last"><a href="http://www.ch.cam.ac.uk/privacy.html">Privacy</a></li>
   <li class="link"><a href="http://www.cam.ac.uk/site/">Accessibility</a></li>
 </ul>
