--- a/src/main/webapp/instructions.html
+++ b/src/main/webapp/instructions.html
@@ -76,6 +76,7 @@
     <li>A carat e.g. N^2</li>
     <li>Bracketing e.g. N(2)</li>
     <li>Using tildes e.g. N~2~</li>
+    <li>Using stars e.g. N*2*</li>
   </ul>
   <p>Note that for locants OPSIN will be able to disambiguate that N2 means N^2 and 
   for von Baeyer systems OPSIN will intelligently guess what should have been superscripted. For spiro systems indication of superscripts is required.</p>
