Added isotope example

--- a/src/main/webapp/information.html
+++ b/src/main/webapp/information.html
@@ -242,6 +242,14 @@ tellurides, telluroketones, tellurosemicarbazones, tellurones, telluroxides, thi
 		</td>
   </tr>
   <tr>
+    <td>Isotope specification</td>
+    <td>
+				<a href="opsin/(2H6)propan-2-one.png">(<sup>2</sup>H<sub>6</sub>)propan-2-one</a><br/>
+				<a href="opsin/acetone-d6.png">acetone-d6</a><br/>
+				<a href="opsin/hexadeuterioacetone.png">hexadeuterioacetone</a>
+		</td>
+  </tr>
+  <tr>
     <td>R/S stereochemistry</td>
     <td><a href="opsin/(1R%2C3S)-3-amino-3-methylcyclohexanecarboxylic%20acid.png">(1R,3S)-3-amino-3-methylcyclohexanecarboxylic acid</a></td>
   </tr>
