--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -66,7 +66,7 @@
       <input type="submit" value="Submit" />
     </fieldset>
   </form>
-  <p><span id="last-update">Updated 28/8/16: Made warning/error messages more visible</span><br/>If you have found OPSIN useful in your work citing our <a href="http://pubs.acs.org/doi/full/10.1021/ci100384d">paper</a> would be very much appreciated. Depiction courtesy of the <a href="http://lifescience.opensource.epam.com/indigo/">Indigo Toolkit</a></p>
+  <p><span id="last-update">Updated 16/10/16: OPSIN 2.2.0 has been released! This version is available from <a href="http://bitbucket.org/dan2097/opsin/downloads">BitBucket</a> and Maven central</span><br/>If you have found OPSIN useful in your work citing our <a href="http://pubs.acs.org/doi/full/10.1021/ci100384d">paper</a> would be very much appreciated. Depiction courtesy of the <a href="http://lifescience.opensource.epam.com/indigo/">Indigo Toolkit</a></p>
   <div id="opsininstructions">
     <p>Enter a chemical name into the box and then click submit.<br />
        The chemical structure described by the name, or why it could not be interpreted, will appear here.</p>
