--- a/src/main/webapp/error.html
+++ b/src/main/webapp/error.html
@@ -29,14 +29,14 @@
 <ul id="nav-breadcrumb">
   <li class="first"><a href="http://www.cam.ac.uk/">University of Cambridge</a></li>
   <li><a href="http://www.ch.cam.ac.uk/">Department of Chemistry</a></li>
-  <li><a href="http://www-ucc.ch.cam.ac.uk/">Centre for Molecular Informatics</a></li>
+  <li><a href="http://www-cmi.ch.cam.ac.uk/">Centre for Molecular Informatics</a></li>
 </ul>
 
 <div style="min-height: 360px">
 	<p>OPSIN has failed to process the following request: %INPUT%</p>
   <p>The reason given for this failure by OPSIN is as follows:</p>
   <h3>%ERRORMESSAGE%</h3>
-  <p>If you think this is a bug please get in <a href="mailto:daniel@nextmovesoftware.com">touch</a>!</p>
+  <p>If you think this is a bug please get file a bug on the <a href="https://bitbucket.org/dan2097/opsin/issues">issue tracker</a>.</p>
   <p>The server returned a %ERRORCODE% error code. For more information on the meaning of this error code see <a href="http://www.w3.org/Protocols/rfc2616/rfc2616-sec10.html#sec10.4.5">here</a>.</p>
 	<p>Return to <a href="/">home page</a>.</p>
 </div>
@@ -63,9 +63,9 @@
 <!-- end of #content -->
 
 <ul id="site-info">
-  <li class="copy">&copy; 2009-2017 <a href="mailto:daniel@nextmovesoftware.com">Daniel Lowe</a>, Centre for Molecular Informatics</li>
-  <li class="link last"><a href="http://www.ch.cam.ac.uk/privacy.html">Privacy</a></li>
-  <li class="link"><a href="http://www.cam.ac.uk/site/">Accessibility</a></li>
+  <li class="copy">&copy; 2009-2017 Daniel Lowe, Centre for Molecular Informatics</li>
+  <li class="link last"><a href="http://www.cam.ac.uk/about-this-site/privacy-policy">Privacy</a></li>
+  <li class="link"><a href="http://www.cam.ac.uk/about-this-site/accessibility">Accessibility</a></li>
 </ul>
 
 </div>
