--- a/src/main/webapp/information.html
+++ b/src/main/webapp/information.html
@@ -54,7 +54,7 @@ table#supported-nomenclature td {
 <ul id="nav-breadcrumb">
   <li class="first"><a href="http://www.cam.ac.uk/">University of Cambridge</a></li>
   <li><a href="http://www.ch.cam.ac.uk/">Department of Chemistry</a></li>
-  <li><a href="http://www-ucc.ch.cam.ac.uk/">Centre for Molecular Informatics</a></li>
+  <li><a href="http://www-cmi.ch.cam.ac.uk/">Centre for Molecular Informatics</a></li>
 </ul>
 
 <div style="min-height: 360px">
@@ -327,9 +327,9 @@ without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR
 <!-- end of #content -->
 
 <ul id="site-info">
-  <li class="copy">&copy; 2009-2017 <a href="mailto:daniel@nextmovesoftware.com">Daniel Lowe</a>, Centre for Molecular Informatics</li>
-  <li class="link last"><a href="http://www.ch.cam.ac.uk/privacy.html">Privacy</a></li>
-  <li class="link"><a href="http://www.cam.ac.uk/site/">Accessibility</a></li>
+  <li class="copy">&copy; 2009-2017 Daniel Lowe, Centre for Molecular Informatics</li>
+  <li class="link last"><a href="http://www.cam.ac.uk/about-this-site/privacy-policy">Privacy</a></li>
+  <li class="link"><a href="http://www.cam.ac.uk/about-this-site/accessibility">Accessibility</a></li>
 </ul>
 
 </div>
