--- a/src/main/webapp/instructions.html
+++ b/src/main/webapp/instructions.html
@@ -46,6 +46,7 @@
     <li>.stdinchikey gives StdInChIKey</li>
     <li>.png gives a depiction</li>
     <li>.smi gives SMILES</li>
+    <li>.svg gives a vector graphic depiction</li>
     <li>.json gives JSON (keys: cml, inchi, stdinchi, stdinchikey, smiles, message)</li>
   </ul>
   <p>For example <a href="opsin/cyclopropane.png">http://opsin.ch.cam.ac.uk/opsin/cyclopropane.png</a> yields a depiction of cyclopropane.</p>
@@ -57,7 +58,8 @@
     <li>chemical/x-inchi for InChI (<b>NOTE:</b> This is tautomer-specific, use StdInChI for a tautomer-independent representation)</li>
     <li>chemical/x-stdinchi for StdInChI</li>
     <li>chemical/x-stdinchikey for StdInChIKey</li>
-    <li>image/png for png depiction</li>
+    <li>image/png for PNG depiction</li>
+    <li>image/svg+xml for SVG depiction</li>
     <li>chemical/x-daylight-smiles for SMILES</li>
     <li>application/json for JSON (keys: cml, inchi, stdinchi, stdinchikey, smiles, message)</li>
   </ul>
