Added status/warnings to JSON format

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -66,7 +66,7 @@
       <input type="submit" value="Submit" />
     </fieldset>
   </form>
-  <p><span id="last-update">Updated 2019-02-09: OPSIN 2.4.0 has now been released. This is available from <a href="https://bitbucket.org/dan2097/opsin/downloads/">BitBucket</a> and Maven central<br/>If you have found OPSIN useful in your work citing our <a href="https://pubs.acs.org/doi/full/10.1021/ci100384d">paper</a> would be very much appreciated. Depiction courtesy of the <a href="https://lifescience.opensource.epam.com/indigo/">Indigo Toolkit</a></p>
+  <p><span id="last-update">Updated 2019-07-13: JSON format now has keys for status and warnings. This is available from <a href="https://bitbucket.org/dan2097/opsin/downloads/">BitBucket</a> and Maven central<br/>If you have found OPSIN useful in your work citing our <a href="https://pubs.acs.org/doi/full/10.1021/ci100384d">paper</a> would be very much appreciated. Depiction courtesy of the <a href="https://lifescience.opensource.epam.com/indigo/">Indigo Toolkit</a></p>
   <div id="opsininstructions">
     <p>Enter a chemical name into the box and then click submit.<br />
        The chemical structure described by the name, or why it could not be interpreted, will appear here.</p>
