--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -69,7 +69,7 @@
       <input type="submit" value="Submit" />
     </fieldset>
   </form>
-  <p><span id="last-update">Updated 2020-05-10: OPSIN's source code is now hosted on <a href="https://github.com/dan2097/opsin">GitHub</a><br/>If you have found OPSIN useful in your work citing our <a href="https://pubs.acs.org/doi/full/10.1021/ci100384d">paper</a> would be very much appreciated. Depiction courtesy of the <a href="https://lifescience.opensource.epam.com/indigo/">Indigo Toolkit</a></p>
+  <p><span id="last-update">Updated 2021-09-23: Numerous minor updates<br/>If you have found OPSIN useful in your work citing our <a href="https://pubs.acs.org/doi/full/10.1021/ci100384d">paper</a> would be very much appreciated. Depiction courtesy of the <a href="https://lifescience.opensource.epam.com/indigo/">Indigo Toolkit</a></p>
   <div id="opsininstructions">
     <p>Enter a chemical name into the box and then click submit.<br />
        The chemical structure described by the name, or why it could not be interpreted, will appear here.</p>
@@ -115,7 +115,7 @@
 <!-- end of #content -->
 
 <ul id="site-info">
-  <li class="copy">&copy; 2009-2020 Daniel Lowe, Centre for Molecular Informatics</li>
+  <li class="copy">&copy; 2009-2021 Daniel Lowe, Centre for Molecular Informatics</li>
   <li class="link last"><a href="https://www.cam.ac.uk/about-this-site/privacy-policy">Privacy</a></li>
   <li class="link"><a href="https://www.cam.ac.uk/about-this-site/accessibility">Accessibility</a></li>
 </ul>
