Replace JniInchi with JnaInchi

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -69,7 +69,7 @@
       <input type="submit" value="Submit" />
     </fieldset>
   </form>
-  <p><span id="last-update">Updated 2021-09-23: Numerous minor updates<br/>If you have found OPSIN useful in your work citing our <a href="https://pubs.acs.org/doi/full/10.1021/ci100384d">paper</a> would be very much appreciated. Depiction courtesy of the <a href="https://lifescience.opensource.epam.com/indigo/">Indigo Toolkit</a></p>
+  <p><span id="last-update">Updated 2021-12-13: Updated to latest InChI version (1.06), using <a href="https://github.com/dan2097/jna-inchi">JNA-InChI</a> <br/>If you have found OPSIN useful in your work citing our <a href="https://pubs.acs.org/doi/full/10.1021/ci100384d">paper</a> would be very much appreciated. Depiction courtesy of the <a href="https://lifescience.opensource.epam.com/indigo/">Indigo Toolkit</a></p>
   <div id="opsininstructions">
     <p>Enter a chemical name into the box and then click submit.<br />
        The chemical structure described by the name, or why it could not be interpreted, will appear here.</p>
